<resources>
    <string name="app_name">Techlytik</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="new_user">New User?</string>
    <string name="forgot">Forgot password?</string>
    <string name="register">Register</string>
    <string name="recover">Recover Password</string>
    <string name="forgotxp">Please enter your company name and the username you used to sign up.</string>
</resources>
