<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="techlytik.techlytik.LoginActivity"
    android:background="@drawable/login_bg">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >



        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/techlogo"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username"
                android:id="@+id/emailEdit"
                android:singleLine="true"
                android:maxLines="1"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:id="@+id/passwordEdit"
                android:singleLine="true"
                android:maxLines="1"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/signinbutton"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:textColor="#000000"
                android:background="#FFFFFF"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_user"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="#777777"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/registerButton"
                android:text="@string/register"
                style="?android:textAppearanceSmall"
                android:layout_gravity="center"
                android:textColor="#000000"
                android:background="#FFFFFF"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="#777777"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/forgotButton"
                android:text="@string/recover"
                style="?android:textAppearanceSmall"
                android:layout_gravity="center"
                android:textColor="#000000"
                android:background="#FFFFFF"
                android:padding="10dp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
